--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-photo">
-                <img src="/portfolio/img/Pablo.jpeg" alt="Pablo Moreno Tirado" class="profile-photo">
+                <img src="img/Pablo.jpeg" alt="Pablo Moreno Tirado" class="profile-photo">
                 <div class="photo-border"></div>
             </div>
             <h1 class="hero-title">Pablo Moreno Tirado</h1>
@@ -302,7 +302,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/img/MolaJuegos.png" alt="Task Management App">
+                        <img src="img/MolaJuegos.png" alt="Task Management App">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://proyecto-final-6e3e3.web.app/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
@@ -323,7 +323,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/img/PeluqueriaLaravel.png" alt="API REST">
+                        <img src="img/PeluqueriaLaravel.png" alt="API REST">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://github.com/Pablomt25/Laravel-Peluqueria" class="project-link"><i class="fab fa-github"></i></a>
@@ -343,7 +343,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/img/chat.png" alt="Dashboard Analytics">
+                        <img src="img/chat.png" alt="Dashboard Analytics">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://github.com/Pablomt25/Laravel-Peluqueria" class="project-link"><i class="fab fa-github"></i></a>
@@ -364,7 +364,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/img/apis.png" alt="Sistema de Inventario">
+                        <img src="img/apis.png" alt="Sistema de Inventario">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://github.com/Pablomt25/app-apis" class="project-link"><i class="fab fa-github"></i></a>
@@ -384,7 +384,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/img/symponhy.png" alt="Juego Unity">
+                        <img src="img/symponhy.png" alt="Juego Unity">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://github.com/Pablomt25/Symfony-Restaurantes" class="project-link"><i class="fab fa-github"></i></a>
